--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore src/djfoxer.PiHole.AdFilterSet/djfoxer.PiHole.AdFilterSet.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore src/djfoxer.PiHole.AdFilterSet/djfoxer.PiHole.AdFilterSet.sln
     - name: Test
       run: dotnet test --no-build --verbosity normal
