--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore src/djfoxer.PiHole.AdFilterSet/djfoxer.PiHole.AdFilterSet.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal src/djfoxer.PiHole.AdFilterSet/Tests/djfoxer.PiHole.AdFilterSet.Tests/djfoxer.PiHole.AdFilterSet.Tests.csproj
